# llama.cpp

./: CMakeLists.txt  set_max_cpufreq.sh  setenv_onemkl.sh
examples/gguf/: CMakeLists.txt
examples/sycl/: CMakeLists.txt
